Formatted the tables accessed by the admin

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,6 +5,15 @@ html,body {
   font-family: 'Merriweather';
 }
 
+.bg-grey{
+  background-color: #333132;
+}
+
+.head-div{
+  color: #efedf0;
+  text-align: center;
+  font-size: 50px;
+}
 
 #wrap {
   position: relative;
