--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -2,11 +2,15 @@
 
 .grouping{
   padding-left: 5%;
+  padding-right: 5%;
+}
+
+.table-size{
+  width: 50%;
 }
 
 thead{
   background-color: #c0c0c0;
-  width: 1500;
 }
 
 .scrollable{
