--- a/app/views/studies/month_timeline.html.haml
+++ b/app/views/studies/month_timeline.html.haml
@@ -1,35 +1,41 @@
-%table
-  %thead
-    %tr
-      %th Study Name
-      %th January
-      %th February
-      %th March
-      %th April
-      %th May
-      %th June
-      %th July
-      %th August
-      %th September
-      %th October
-      %th November
-      %th December
+.grouping
+
+  %h1 Projected tasks for studies
+
+  .scrollable
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th Study Name
+          %th Jan
+          %th Feb
+          %th Mar
+          %th Apr
+          %th May
+          %th Jun
+          %th Jul
+          %th Aug
+          %th Sep
+          %th Oct
+          %th Nov
+          %th Dec
 
 
-  %tbody
-    - @studies.each do |study|
-      %tr
-        %td= study.study_name
-        %td= StudyTask.where(study_id: study.study_id, month: 1).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 2).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 3).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 4).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 5).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 6).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 7).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 8).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 9).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 10).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 11).distinct(true).pluck(:task_name).first
-        %td= StudyTask.where(study_id: study.study_id, month: 12).distinct(true).pluck(:task_name).first
+      %tbody
+        %tr
+        - @studies.each do |study|
+          %tr
+            %td= study.study_name
+            %td= StudyTask.where(study_id: study.study_id, month: 1).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 2).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 3).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 4).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 5).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 6).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 7).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 8).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 9).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 10).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 11).distinct(true).pluck(:task_name).first
+            %td= StudyTask.where(study_id: study.study_id, month: 12).distinct(true).pluck(:task_name).first
 %br
