--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -1,29 +1,32 @@
-%h1 List of Available Tasks & Details
+.grouping
 
-%table
-  %thead
-    %tr
-      %th Task Name
-      %th Predicted Hours
-      %th Average Hours
-      %th Maximum Hours
-      %th Minimum Hours
-      %th
-      %th
-      %th
+  %h1 List of Available Tasks & Details
 
-  %tbody
-    - @task_lists.each do |task_list|
-      %tr
-        %td= task_list.task_name
-        %td= task_list.predicted_hours
-        %td= StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).inject(:+).to_f / StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).length
-        %td= StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).max
-        %td= StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).min
-        %td= link_to 'Show', task_list
-        %td= link_to 'Edit', edit_task_list_path(task_list)
-        -#%td= link_to 'Destroy', task_list, method: :delete, data: { confirm: 'Are you sure?' }
+  .scrollable
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th Task Name
+          %th Predicted Hours
+          %th Average Hours
+          %th Maximum Hours
+          %th Minimum Hours
+          %th Show
+          %th Edit
+          %th Destroy
 
-%br
+      %tbody
+        - @task_lists.each do |task_list|
+          %tr
+            %td = task_list.task_name
+            %td = task_list.predicted_hours
+            %td = StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).inject(:+).to_f / StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).length
+            %td = StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).max
+            %td = StudyTask.where(complete: true, task_name: task_list.task_name).pluck('lead_hours_worked', 'backup_hours_worked', 'guest_hours_worked').map(&:sum).min
+            %td = link_to 'Show', task_list
+            %td = link_to 'Edit', edit_task_list_path(task_list)
+            %td = link_to 'Destroy', task_list, method: :delete, data: { confirm: 'Are you sure?' }
 
-= link_to 'New Task list', new_task_list_path
+  %br
+
+  = link_to 'New Task list', new_task_list_path
