--- a/app/views/users/data_managers.html.haml
+++ b/app/views/users/data_managers.html.haml
@@ -1,18 +1,20 @@
-%h1 Listing Users
+.grouping
+  %h1 Listing Users
 
-%table
-  %thead
-    %tr
-      %th Email
-      %th Username
-      %th Admin
+  .scrollable
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th Email
+          %th Username
+          %th Admin
 
-  %tbody
-    - User.all.each do |user|
-      %tr
-        %td= user.email
-        %td= user.username
-        %td= user.admin
-%br
+      %tbody
+        - User.all.each do |user|
+          %tr
+            %td= user.email
+            %td= user.username
+            %td= user.admin
+  %br
 
-= link_to 'New User', new_user_path
+  = link_to 'New User', new_user_path
